# python-packaging-tutorial

./: LICENSE  README.md  pyproject.toml
foobar/: __init__.py  get_rate.py
src/foobar/: __init__.py
