[project]
name = "foobar"
version = "0.0.9"
authors = [
  { name="David Chin", email="prehensilecode@users.noreply.github.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/prehensilecode/python-packaging-tutorial"
"Bug Tracker" = "https://github.com/prehensilecode/python-packaging-tutorial/issues"

[project.scripts]
get_rate = "foobar.get_rate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
