[build-system]
requires = [ "poetry-core>=1.0.0" ]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "foobar"
version = "0.0.9"
authors = [
   "David Chin <prehensilecode@users.noreply.github.com>",
]
description = "A small example package"
homepage = "https://github.com/prehensilecode/python-packaging-tutorial"
repository = "https://github.com/prehensilecode/python-packaging-tutorial/"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [{include = "foobar"}]

[tool.poetry.dependencies]
python = ">=3.9"

[tool.poetry.scripts]
foobar = "foobar.get_rate:main"

