[build-system]
requires = [ "poetry-core>=1.0.0" ]
build-backend = "poetry.core.masonry.api"

[project]
name = "foobar"
version = "0.0.9"
authors = [
   { name = "David Chin", email = "prehensilecode@users.noreply.github.com"},
]
description = "A small example package"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"

[project.urls]
homepage = "https://github.com/prehensilecode/python-packaging-tutorial"
repository = "https://github.com/prehensilecode/python-packaging-tutorial"
documentation = "https://github.com/prehensilecode/python-packaging-tutorial"
"Bug Tracker" = "https://github.com/prehensilecode/python-packaging-tutorial/issues"

[project.scripts]
foobar = "foobar.get_rate:main"

[tool.poetry]
packages = [
    { include = "foobar"},
]

[tool.project.dependencies]
python = ">=3.9,<4.0"
